--- a/environment.yml
+++ b/environment.yml
@@ -3,10 +3,13 @@ channels:
   - conda-forge
 dependencies:
   - python=3
-  - pymc3=3
+  - pymc3=3.0
+  - scipy=0.19.1
+  - numpy=1.12.1
   - pandas
   - matplotlib
   - seaborn
+  - pip
   - pip:
       - ipysankeywidget
-      - sankeyview
+      - floweaver
